# checksum-tools

./: .gitignore  INSTALL_MACOS.md  INSTALL_WINDOWS.md  MANUAL.md  README.md  checksum-tools_README.docx  checksum-tools_manual.md  pyproject.toml
checksum_tools/: __init__.py  __main__.py  cli.py  config.py  local.py
tests/: test_checksum_tools.py
