[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checksum-tools"
version = "2.0.0"
description = "Generate or verify checksums for a set of files"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Stanford University Libraries"},
]
keywords = ["checksum", "digest", "md5", "sha256", "verification", "preservation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
progress = ["tqdm>=4.60"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "tqdm>=4.60",
]

[project.scripts]
checksum-tools = "checksum_tools.cli:cli"

[project.urls]
Homepage = "https://github.com/sul-dlss/checksum-tools"
Repository = "https://github.com/sul-dlss/checksum-tools"
Issues = "https://github.com/sul-dlss/checksum-tools/issues"

[tool.setuptools.packages.find]
include = ["checksum_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
